--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="home.html">home</a>
+    <a href="about.html">about</a>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque necessitatibus nostrum suscipit voluptatum, sed est voluptatibus quisquam odit ullam, saepe autem enim sunt ipsum beatae? Necessitatibus facere vitae inventore illo?
     </p>
