--- a/home.html
+++ b/home.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <a href="home.html">home</a>
     <a href="about.html">about</a>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque necessitatibus nostrum suscipit voluptatum, sed est voluptatibus quisquam odit ullam, saepe autem enim sunt ipsum beatae? Necessitatibus facere vitae inventore illo?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque necessitatibus nostrum suscipit voluptatum, sed
+        est voluptatibus quisquam odit ullam, saepe autem enim sunt ipsum beatae? Necessitatibus facere vitae inventore
+        illo?
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum voluptate laudantium optio eaque, error cum
+        soluta praesentium aliquam obcaecati repellendus dolores dignissimos placeat recusandae minus quas aspernatur
+        neque veritatis quae.
     </p>
 </body>
+
 </html>
